--- a/src/web/css/main.css
+++ b/src/web/css/main.css
@@ -127,10 +127,14 @@ table th,
 table td {
 	text-align: left;
 	padding: 0.75em 1em;
-	display: inline-block;
 	white-space: nowrap;
 	overflow: hidden;
 	text-overflow: ellipsis;
+}
+
+table td.label {
+	cursor: default;
+	text-align: right;
 }
 
 table td {
