--- a/src/web/css/main.css
+++ b/src/web/css/main.css
@@ -36,6 +36,7 @@ body {
 	padding: 0;
 	text-align: center;
 	overflow-x: hidden;
+	line-height: 1.4;
 	background: linear-gradient(135deg, #fff, #fffaf7 10%, #fff3ea 20%, #f5f3f0 33%, #ddf3ff 66%, #d0f1c9) 50% fixed;
 	font-family: Comfortaa, Verdana, "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
@@ -80,6 +81,9 @@ body>container>element>header h2 {
 	text-align: center;
 	color: rgba(255, 255, 255, 0.7);
 	top: 2.5em;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 
 button {
@@ -101,19 +105,29 @@ button.icon {
 	width: 2em;
 	height: 2em;
 	position: absolute;
-	background-color: rgba(255, 0, 0, 0.2);
+	background: rgba(255, 0, 0, 0.2);
 	margin: 0;
 	padding: 0;
 }
 
+button.add {
+	left: 33.34%;
+	margin-left: -2.2em;
+	top: 0.2em;
+	display: none;
+}
+
 h1 {
-	margin: 1em;
-	font-size: 1.3em;
+	margin: 1em 0.5em;
+	font-size: 1.2em;
 	background: var(--headerLabelBG);
 	display: inline-block;
-	padding: 0.5em 2em;
+	padding: 0.5em 1em;
 	border-radius: 2em;
 	font-weight: bold;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 
 error {
@@ -131,6 +145,12 @@ error {
 header error {
 	color: rgb(0, 255, 0);
 	text-shadow: 0 0 0.2em rgba(0, 0, 0, 0.6);
+}
+
+header button.icon {
+	background: var(--headerLabelBG);
+	right: 0.5em;
+	bottom: 0.5em;
 }
 
 popup error {
@@ -164,7 +184,6 @@ table td {
 
 table td.description {
 	white-space: normal;
-	line-height: 1.5;
 }
 
 table th {
@@ -182,6 +201,11 @@ table tr.past td {
 
 table td button {
 	margin: 0;
+}
+
+table td button.icon {
+	position: relative;
+	font-size: 1.2em;
 }
 
 login table td {
@@ -227,9 +251,8 @@ tabBody element {
 	overflow-y: auto;
 	padding: 1em;
 	height: 100%;
-	line-height: 1.4;
 	background: var(--borderColor);
-	border-radius: 1em;
+	border-radius: 1em 1em 0 0;
 }
 
 tabBody img {
@@ -380,7 +403,6 @@ value {
 	max-height: 20em;
 	max-width: 100%;
 	margin-bottom: 1em;
-	line-height: 1.5;
 	overflow: auto;
 	padding: 0.5em;
 	border-radius: 0 0.5em 0.5em 0.5em;
