--- a/src/web/css/main.css
+++ b/src/web/css/main.css
@@ -52,19 +52,22 @@ body>container {
 }
 
 body>container>element {
-	display: flex;
-	flex-direction: row;
+	display: block;
 	position: relative;
+	border: solid 1em transparent;
 }
 
 body>container>element.intro {
+	display: flex;
 	justify-content: center;
+	padding: 0;
+	border: none;
 }
 
 body>container>element.intro img.text {
 	position: absolute;
 	width: 80%;
-	margin-top: 2em;
+	margin-top: 4em;
 	max-width: 40em;
 }
 
@@ -76,17 +79,28 @@ body>container>element.intro description {
 	background: rgba(0, 0, 0, 0.4);
 	margin: 2em;
 	border-radius: 1em;
+	font-size: 1.2em;
+	text-shadow: 0.1em 0.1em 0.5em black;
 }
 
-body>container>element>header {
-	display: inline-block;
-	width: 100%;
-	position: absolute;
-	overflow-x: hidden;
-}
-
-body>container>element>header>button {
+body>container>element div.title {
 	display: none;
+	text-align: left;
+	padding-left: 0.8em;
+	padding-bottom: 0.25em;
+}
+
+body>header {
+	display: none;
+	height: 4em;
+	position: fixed;
+	z-index: 12;
+	width: 100%;
+	color: white;
+	text-shadow: 0.1em 0.1em 0.5em black;
+}
+
+body>header>button {
 	position: absolute;
 	right: 1em;
 	margin: 0;
@@ -129,10 +143,8 @@ button.icon {
 }
 
 button.add {
-	left: 33.34%;
-	margin-left: -2.2em;
-	top: 0.2em;
-	display: none;
+	right: 0;
+	top: 0;
 }
 
 h1 {
@@ -152,17 +164,22 @@ error {
 	position: fixed;
 	text-overflow: ellipsis;
 	overflow: hidden;
-	font-size: 0.8em;
-	left: 0;
+	left: 0.5em;
 	text-align: center;
-	right: 0;
-	top: 0;
+	right: 0.5em;
+	top: 0.5em;
+	color: rgb(180, 0, 0);
+	font-weight: bold;
 }
 
 header button.icon {
-	background: var(--headerLabelBG);
+	background: rgba(255, 255, 255, 0.7);
 	right: 0.5em;
 	bottom: 0.5em;
+}
+
+ul {
+	text-align: left;
 }
 
 table {
@@ -220,49 +237,6 @@ login table td {
 	cursor: default;
 }
 
-tabHeader {
-	white-space: nowrap;
-	overflow-x: auto;
-	width: 100%;
-	position: relative;
-	display: block;
-	padding: 0 0.75em;
-}
-
-tabBody {
-	display: inline-block;
-	width: 100%;
-	max-width: 50em;
-	position: relative;
-	overflow-x: hidden;
-	height: 100%;
-	text-align: left;
-}
-
-tabBody>container {
-	width: 300%;
-	display: inline-block;
-	position: absolute;
-	height: 100%;
-	transition: all ease-out .4s;
-	left: 0;
-	overflow-y: hidden;
-}
-
-tabBody element {
-	display: inline-block;
-	position: absolute;
-	width: 33.34%;
-	min-height: 10em;
-	left: 0;
-	box-sizing: border-box;
-	overflow-y: auto;
-	padding: 1em;
-	height: 100%;
-	background: var(--borderColor);
-	border-radius: 1em 1em 0 0;
-}
-
 tabBody img {
 	padding: 1em;
 	background: rgba(255, 255, 255, 0.3);
@@ -271,24 +245,13 @@ tabBody img {
 	max-width: 98%;
 }
 
-tabBody user,
-tabBody event {
+user,
+event {
 	position: relative;
 	display: block;
-	width: fit-content;
+	width: 100%;
 	min-width: 100%;
-}
-
-tab {
-	position: relative;
-	display: inline-block;
-	cursor: pointer;
-	padding: 0.75em 1em;
-	border-radius: 1em 1em 0 0;
-}
-
-tab.selected {
-	background: var(--borderColor);
+	overflow-x: auto;
 }
 
 a {
@@ -366,11 +329,10 @@ value {
 value item {
 	display: inline-block;
 	position: relative;
-	padding: 0.5em;
+	padding: 0.5em 2em 0.5em 0.5em;
 	margin: 0.25em;
 	border-radius: 0.5em;
 	cursor: pointer;
-	padding-right: 2em;
 }
 
 value item.selected {
