--- a/src/web/css/main.css
+++ b/src/web/css/main.css
@@ -422,9 +422,32 @@ feedbacks {
 	text-align: left;
 }
 
+history {
+	width: 100%;
+	position: relative;
+	display: block;
+	overflow-x: auto;
+	display: flex;
+	flex-flow: row;
+}
+
 history item {
 	position: relative;
 	display: block;
+}
+
+history item img {
+	width: calc(100% - 2em);
+	margin-left: 1em;
+}
+
+history item text {
+	position: absolute;
+	display: inline-block;
+	bottom: 0;
+	left: 2em;
+	right: 2em;
+	text-align: center;
 }
 
 rating,
