--- a/src/web/css/main.css
+++ b/src/web/css/main.css
@@ -425,19 +425,20 @@ feedbacks {
 history {
 	width: 100%;
 	position: relative;
-	display: block;
 	overflow-x: auto;
-	display: flex;
-	flex-flow: row;
+	display: grid;
+	grid-auto-flow: column;
+	height: 30em;
 }
 
 history item {
 	position: relative;
 	display: block;
+	width: 100vw;
 }
 
 history item img {
-	width: calc(100% - 2em);
+	height: 100%;
 	margin-left: 1em;
 }
 
