--- a/src/web/css/main.css
+++ b/src/web/css/main.css
@@ -435,10 +435,13 @@ history item {
 	display: block;
 	width: 100%;
 	height: 100%;
+	padding: 1em;
 }
 
 history item img {
-	height: 100%;
+	border-radius: 1em;
+	max-width: 100%;
+	max-height: 100%;
 }
 
 history item text {
