--- a/src/web/css/main.css
+++ b/src/web/css/main.css
@@ -446,11 +446,13 @@ history item img {
 
 history item text {
 	position: absolute;
-	display: inline-block;
 	bottom: 0;
-	left: 2em;
-	right: 2em;
-	text-align: center;
+	text-align: right;
+	border-radius: 1em;
+	background: rgba(255, 255, 255, 0.4);
+	right: 1em;
+	padding: 1em;
+	font-size: 0.8em;
 }
 
 rating,
