--- a/src/web/css/main.css
+++ b/src/web/css/main.css
@@ -450,7 +450,7 @@ history item text {
 	text-align: right;
 	border-radius: 1em;
 	background: rgba(255, 255, 255, 0.4);
-	right: 1em;
+	right: 0;
 	padding: 1em;
 	font-size: 0.8em;
 }
