--- a/src/web/css/main.css
+++ b/src/web/css/main.css
@@ -102,7 +102,7 @@ body>header {
 	z-index: 8;
 	width: 100%;
 	color: white;
-	text-shadow: 0.1em 0.1em 0.5em black;
+	text-shadow: 0.1em 0.1em 0.5em rgba(0, 0, 0, 0.6);
 }
 
 body>header>button {
