--- a/src/web/css/main.css
+++ b/src/web/css/main.css
@@ -134,11 +134,12 @@ button {
 	font-size: 1em;
 	font-family: Comfortaa, Verdana, "Helvetica Neue", Helvetica, Arial, sans-serif;
 	z-index: 2;
+	color: black;
+	border: none;
 }
 
 button.icon {
 	font-size: 1.3em;
-	border-radius: 1em;
 	width: 2em;
 	height: 2em;
 	position: absolute;
