--- a/src/web/css/main.css
+++ b/src/web/css/main.css
@@ -159,7 +159,8 @@ button.add {
 error {
 	padding-bottom: 1em;
 	position: relative;
-	display: inline-block;
+	display: block;
+	text-align: center;
 	color: red;
 	font-style: italic;
 	font-weight: bold;
