--- a/src/web/css/main.css
+++ b/src/web/css/main.css
@@ -123,7 +123,7 @@ body>header h2 {
 
 button {
 	background: rgba(255, 255, 255, 0.6);
-	border: var(--border);
+	border: solid 1px rgba(0, 0, 0, 0.05);
 	padding: 0.5em 1em;
 	border-radius: 1em;
 	outline: none;
@@ -164,6 +164,7 @@ error {
 	color: red;
 	font-style: italic;
 	font-weight: bold;
+	font-size: 0.8em;
 }
 
 h1 {
