--- a/src/web/admin/css/main.css
+++ b/src/web/admin/css/main.css
@@ -58,7 +58,7 @@ body>container>element input {
 	right: 1em;
 	top: 0;
 	border-radius: 1em 1em 0 0;
-	background: rgb(255, 255, 240);
+	background: rgba(170, 170, 255, 0.075);
 }
 
 body>container>element>buttons {
@@ -158,7 +158,7 @@ tab {
 }
 
 tab.selected {
-	background: rgb(255, 250, 200);
+	background: rgba(170, 170, 255, 0.15);
 }
 
 log,
