--- a/src/web/css/main.css
+++ b/src/web/css/main.css
@@ -90,11 +90,9 @@ body>container>element.history button {
 }
 
 body>button {
-	position: absolute;
-	background: rgba(255, 255, 255, 0.4);
-	right: 0;
-	top: 0;
-	margin: 1em;
+	background: rgba(255, 255, 255, 0.4) !important;
+	right: 0.5em;
+	top: 0.5em;
 }
 
 body>h2 {
