--- a/src/web/css/main.css
+++ b/src/web/css/main.css
@@ -91,8 +91,8 @@ body>container>element.history button {
 
 body>button {
 	background: transparent !important;
-	right: 0.5em;
-	top: 0.5em;
+	right: 0.2em;
+	top: 0.2em;
 	filter: drop-shadow(0.1em 0.1em 0.2em rgba(0, 0, 0, 0.3));
 	z-index: 4;
 }
@@ -101,7 +101,7 @@ body>h2 {
 	position: absolute;
 	white-space: nowrap;
 	overflow: hidden;
-	padding: 0.6em 2em 0 0.65em;
+	padding: 0.55em 2em 0 0.65em;
 	margin: 0;
 	text-overflow: ellipsis;
 	text-align: left;
@@ -109,6 +109,7 @@ body>h2 {
 	text-shadow: 0.1em 0.1em 0.2em rgba(0, 0, 0, 0.3);
 	z-index: 4;
 	max-width: 100%;
+	font-size: 1.3em;
 }
 
 button {
