--- a/src/web/css/main.css
+++ b/src/web/css/main.css
@@ -106,7 +106,7 @@ body>h2 {
 	text-overflow: ellipsis;
 	text-align: left;
 	color: white;
-	text-shadow: 0.1em 0.1em 0.2em rgba(0, 0, 0, 0.3);
+	filter: drop-shadow(0.1em 0.1em 0.2em rgba(0, 0, 0, 0.3));
 	z-index: 4;
 	max-width: 100%;
 	font-size: 1.3em;
